[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/entities/door.gd" type="Script" id=1]
[ext_resource path="res://assets/models/door/door_model.scn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.204351, 0.436536, 0.64382 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 0.772886, 0.34788, 0.261411 )

[sub_resource type="BoxShape" id=7]

extents = Vector3( 1.4984, 0.319939, 1.68242 )

[sub_resource type="CapsuleShape" id=3]

radius = 0.489483
height = 3.63175

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1.75855, 2.23345, 2.25989 )

[sub_resource type="BoxShape" id=5]

extents = Vector3( 1.57417, 2.12531, 0.901523 )

[sub_resource type="BoxShape" id=6]

extents = Vector3( 3.87188, 3.42204, 5.55002 )

[node name="door" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="door_model" parent="." instance=ExtResource( 2 )]

transform/local = Transform( 2.20485, 0, 0, 0, 2.20485, 0, 0, 0, 2.20485, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 9
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 0.995282, 0.0970242, 0, -0.0970242, 0.995282, 0, 4.81099, 0.660223 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.80758, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 2 )
shapes/2/transform = Transform( 0.782933, 0.622106, 0, -0.622106, 0.782933, 0, 0, 0, 1, 1.14279, 4.38391, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 2 )
shapes/3/transform = Transform( 0.284145, 0.958781, 0, -0.958781, 0.284145, 0, 0, 0, 1, 1.81642, 3.33707, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 7 )
shapes/4/transform = Transform( -0.124299, 0.992245, 0, -0.992245, -0.124299, 0, 0, 0, 1, 1.8109, 1.40448, -1.43525 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 2 )
shapes/5/transform = Transform( 0.782933, -0.622106, 0, 0.622106, 0.782933, 0, 0, 0, 1, -1.14279, 4.38391, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 2 )
shapes/6/transform = Transform( 0.284145, -0.958781, 0, 0.958781, 0.284145, 0, 0, 0, 1, -1.81642, 3.33707, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 7 )
shapes/7/transform = Transform( -0.124299, -0.992245, 0, 0.992245, -0.124299, 0, 0, 0, 1, -1.8109, 1.40448, -1.43525 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 3 )
shapes/8/transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.388227, 0 )
shapes/8/trigger = false
collision/layers = 1
collision/mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="C2" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.995282, 0.0970242, 0, -0.0970242, 0.995282, 0, 4.81099, 0.660223 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="C1" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.80758, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="R1" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.782933, 0.622106, 0, -0.622106, 0.782933, 0, 0, 0, 1, 1.14279, 4.38391, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 2

[node name="R2" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.284145, 0.958781, 0, -0.958781, 0.284145, 0, 0, 0, 1, 1.81642, 3.33707, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 3

[node name="R3" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.124299, 0.992245, 0, -0.992245, -0.124299, 0, 0, 0, 1, 1.8109, 1.40448, -1.43525 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 4

[node name="L1" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.782933, -0.622106, 0, 0.622106, 0.782933, 0, 0, 0, 1, -1.14279, 4.38391, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 5

[node name="L2" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.284145, -0.958781, 0, 0.958781, 0.284145, 0, 0, 0, 1, -1.81642, 3.33707, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 6

[node name="L3" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.124299, -0.992245, 0, 0.992245, -0.124299, 0, 0, 0, 1, -1.8109, 1.40448, -1.43525 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 7

[node name="C3" type="CollisionShape" parent="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.388227, 0 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 8

[node name="Area" type="Area" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.32611, 1.46494 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 3
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.480647, -1.26176 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.809389, -3.94378 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 6 )
shapes/2/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82389, -1.26176 )
shapes/2/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="open_doors" type="CollisionShape" parent="Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.480647, -1.26176 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="loading_zone" type="CollisionShape" parent="Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.809389, -3.94378 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="camera_zone" type="CollisionShape" parent="Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82389, -1.26176 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 2

[node name="cam_dest" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.99162, 9.75453 )

[node name="cam_look_dest" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83019, 1.63006 )

[connection signal="body_enter_shape" from="Area" to="." method="_on_Area_body_enter_shape"]

[connection signal="body_exit_shape" from="Area" to="." method="_on_Area_body_exit_shape"]


